registry-deployment.yaml
apiVersion: v1
kind: Pod
metadata:
  name: registry
  namespace: default
  labels:
    app: registry
spec:
  containers:
  - name: registry
    image: registry:2
    ports:
    - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: registry-service
  namespace: default
spec:
  selector:
    app: registry
  ports:
  - protocol: TCP
    port: 5000
    targetPort: 5000
  type: ClusterIP
